made resource description flyovers wider to prevent being hidden by browser. fixes #830

--- a/media/css/flyover.css
+++ b/media/css/flyover.css
@@ -138,6 +138,6 @@ The content is just the contents of the flyover.
 }
 
 .resource-description-flyover-container {
-    width: 450px;
+    width: 650px;
 }
 
